# RL-Studio

./: pyproject.toml
rl_studio/: main_rlstudio.py
rl_studio/agents/: __init__.py
rl_studio/agents/f1/: train_ddpg.py
rl_studio/algorithms/: algorithms_type.py  ddpg.py
rl_studio/envs/f1/models/: __init__.py
rl_studio/logs/ddpg_f1_camera/logs_TensorBoard/DDPG_Actor_conv2d32x64_Critic_conv2d32x64-20220303-224812/: events.out.tfevents.1646344092.jarvis.20518.0.v2
rl_studio/logs/ddpg_f1_camera/logs_TensorBoard/DDPG_Actor_conv2d32x64_Critic_conv2d32x64-20220303-224813/: events.out.tfevents.1646344093.jarvis.20518.1.v2
